--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,18 +29,15 @@ dependencies {
     implementation 'com.android.support:support-media-compat:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
 
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-ads:15.0.1'
-    implementation 'com.google.firebase:firebase-analytics:16.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.2'
-    implementation 'com.google.gms:google-services:4.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-ads:17.1.2'
+    implementation 'com.google.firebase:firebase-analytics:16.0.6'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.gms:google-services:4.2.0'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
 
 /*compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.google.firebase:firebase-core:9.8.0'
-    compile 'com.google.firebase:firebase-ads:9.8.0'
-    compile 'com.google.firebase:firebase-analytics:9.8.0'
-    compile 'com.google.firebase:firebase-database:9.8.0'
 */
