--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 6
-        versionName "1.5"
+        versionName "2.a.0"
     }
     buildTypes {
         release {
