--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.ads2dios.adrieladtan.letstalk"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 6
-        versionName "2.a.0"
+        versionCode 7
+        versionName "2.0"
     }
     buildTypes {
         release {
